Fix alignment

--- a/app/assets/stylesheets/views/home.css.scss
+++ b/app/assets/stylesheets/views/home.css.scss
@@ -176,8 +176,14 @@ html.home {
 
         > header {
           p {
-            time {
+            > time {
               margin: 0 .5em;
+            }
+
+            > a,
+            > time,
+            > span {
+              vertical-align: middle;
             }
           }
 
